--- a/package.json
+++ b/package.json
@@ -1,34 +1,44 @@
 {
-  "name": "interax",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "type": "module",
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.9.0",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.1",
-    "logger": "^0.0.1",
-    "moment": "^2.29.4",
-    "mongoose": "^7.3.0",
     "nodemon": "^3.0.1",
+    "pg": "^8.11.2",
+    "pg-hstore": "^2.3.4",
     "redis": "^4.6.7",
+    "sequelize": "^6.32.1",
+    "uuid": "^9.0.0",
     "winston": "^3.10.0",
     "xss-clean": "^0.1.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/hpp": "^0.2.2",
+    "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^16.18.40",
+    "@types/winston": "^2.4.4",
+    "jest": "^29.6.2",
+    "sequelize-cli": "^6.6.1",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  },
+  "scripts": {
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "start": "npm run build && node dist/server.js",
+    "seed": "sequelize db:seed:all"
   }
 }
